-cleaned up CXAdmin pages -removed "times" from datetime fields on ManageMunicipalityVendors. Updated button placement on dialogs to meet dev standards Files modified - [ManageCompanies.html,ManageUsers.html,ManageMunicipalities.html,ManageCompanies.variables.json,ManageMunicipalityVendors.variables.json,ManageSubscriptions.html,Forms.html,ManageMunicipalityVendors.html]

--- a/src/main/webapp/pages/ManageCompanies/ManageCompanies.html
+++ b/src/main/webapp/pages/ManageCompanies/ManageCompanies.html
@@ -22,7 +22,7 @@
                                     <wm-grid-column binding="companyWebsite" caption="Website" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="lastUpdated" caption="Last Updated" type="date" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                    <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                    <wm-grid-action key="addNewRow" display-name="New Company" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Company" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                                     <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
                                     <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                 </wm-grid>
