--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -490,10 +490,10 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow41">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn71">
-                        <wm-composite name="composite3_1" required="true">
+                        <wm-composite name="composite3_1" required="true" show="bind:!!Widgets.selectFormFieldType.datavalue.sqlType">
                             <wm-label class="col-md-3 control-label" name="label8"></wm-label>
                             <wm-container class="col-md-9" name="container3_1">
-                                <wm-text name="textFormFieldLabel" maxchars="120"></wm-text>
+                                <wm-text name="textFormFieldLabel" maxchars="120" updateon="default"></wm-text>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
@@ -510,7 +510,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow44">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn74">
-                        <wm-composite name="composite6" show="bind:Widgets.selectFormFieldType.datavalue.label != 'Boolean'">
+                        <wm-composite name="composite6" show="bind:Widgets.selectFormFieldType.datavalue.label != 'Boolean' &amp;&amp; !!Widgets.selectFormFieldType.datavalue.sqlType">
                             <wm-label class="col-md-3 control-label" name="label10" caption="Required"></wm-label>
                             <wm-container class="col-md-9" name="container5">
                                 <wm-checkbox caption="" class="col-md-9" name="checkboxFormFieldRequired"></wm-checkbox>
@@ -520,22 +520,23 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow42">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn72">
-                        <wm-composite name="composite4_1" show="bind:!!Widgets.selectFormFieldType.datavalue.label &amp;&amp; Widgets.selectFormFieldType.datavalue.label!=='Select' &amp;&amp; Widgets.selectFormFieldType.datavalue.label!=='Multi-Select'">
-                            <wm-label class="col-md-3 control-label" name="label9" caption="Default Value"></wm-label>
+                        <wm-composite name="composite4_1" show="bind:!!Widgets.selectFormFieldType.datavalue.label &amp;&amp; Widgets.selectFormFieldType.datavalue.label!=='Select' &amp;&amp; Widgets.selectFormFieldType.datavalue.label!=='Multi-Select' &amp;&amp; Widgets.selectFormFieldType.datavalue.label!=='Horizontal Line'">
+                            <wm-label class="col-md-3 control-label" name="label9" caption="bind:!!Widgets.selectFormFieldType.datavalue.sqlType ? 'Default Value' : 'Text'"></wm-label>
                             <wm-container class="col-md-9" name="container4_1">
-                                <wm-text name="textDefaultValue" show="bind:Widgets.selectFormFieldType.datavalue.label==='Text'" maxchars="1000"></wm-text>
-                                <wm-textarea name="longTextDefault" show="bind:Widgets.selectFormFieldType.datavalue.label==='Long Text'" maxchars="4000"></wm-textarea>
+                                <wm-text name="textDefaultValue" show="bind:Widgets.selectFormFieldType.datavalue.label==='Text' || Widgets.selectFormFieldType.datavalue.label==='Header'" maxchars="1000" required="bind:Widgets.selectFormFieldType.datavalue.label === 'Header'"></wm-text>
+                                <wm-textarea name="longTextDefault" show="bind:Widgets.selectFormFieldType.datavalue.label==='Long Text' || Widgets.selectFormFieldType.datavalue.label==='Instruction Text'" maxchars="4000" required="bind:Widgets.selectFormFieldType.datavalue.label === 'Instruction Text'"></wm-textarea>
                                 <wm-date name="dateDefaultValue" show="bind:Widgets.selectFormFieldType.datavalue.label==='Date'"></wm-date>
                                 <wm-datetime name="datetimeDefaultValue" show="bind:Widgets.selectFormFieldType.datavalue.label==='Date+Time'"></wm-datetime>
-                                <wm-text name="numberDefaultValue" type="number" step="1" placeholder="Enter number" show="bind:Widgets.selectFormFieldType.datavalue.label==='Number'" maxchars="38" maxvalue="99999999999999999999999999999999999999"></wm-text>
                                 <wm-checkbox caption="" class="col-md-push-3 col-md-9" name="booleanDefaultValue" margin="unset unset unset -100px" show="bind:Widgets.selectFormFieldType.datavalue.label==='Boolean'"></wm-checkbox>
+                                <wm-text name="numberDefaultValue" type="number" step="1" placeholder="Enter number" show="bind:Widgets.selectFormFieldType.datavalue.label==='Number'" maxchars="38" maxvalue="99999999999999999999999999999999999999"></wm-text>
+                                <wm-currency name="currencyDefaultValue" show="bind:Widgets.selectFormFieldType.datavalue.label === 'Currency'" step="0.01"></wm-currency>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow45">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn75">
-                        <wm-composite name="composite8">
+                        <wm-composite name="composite8" show="bind:!!Widgets.selectFormFieldType.datavalue.sqlType">
                             <wm-label class="col-md-3 control-label" name="label12" caption="Help Text"></wm-label>
                             <wm-container class="col-md-9" name="container7">
                                 <wm-textarea name="textareaFormFieldHelpText" placeholder="Enter Tooltip Text" maxchars="1000"></wm-textarea>
@@ -555,7 +556,7 @@
                 </wm-gridrow>
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions1">
-                <wm-button class="btn-primary" caption="Save" type="button" margin="unset 0.5em" name="buttonSaveFormField" iconclass="wi wi-save" on-click="buttonSaveFormFieldClick($event, $scope)" disabled="bind:!Widgets.textFormFieldLabel.datavalue || !Widgets.selectFormFieldType.datavalue.id"></wm-button>
+                <wm-button class="btn-primary" caption="Save" type="button" margin="unset 0.5em" name="buttonSaveFormField" iconclass="wi wi-save" on-click="buttonSaveFormFieldClick($event, $scope)" disabled="bind:(!Widgets.textFormFieldLabel.datavalue &amp;&amp; !!Widgets.selectFormFieldType.datavalue.sqlType) || !Widgets.selectFormFieldType.datavalue.id"></wm-button>
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button2" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
