cleanup Files modified - [ManageForms.html,Login.html,ManageMunicipalityVendors.html,pages-config.json]

--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -22,7 +22,7 @@
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn4" padding="unset unset 1em unset">
                                                 <wm-container class="input-group" name="container3">
                                                     <wm-container class="input-group-addon" name="container4">
-                                                        <wm-icon name="icon1" iconclass="wi wi-user"></wm-icon>
+                                                        <wm-icon name="icon1" iconclass="wi wi-person"></wm-icon>
                                                     </wm-container>
                                                     <wm-text placeholder="Username" name="usernametext" class="app-login-username" width="100%" autocomplete="false" autocorrect="off" autocapitalize="off" updateon="default" required="true"></wm-text>
                                                 </wm-container>
