--- a/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
+++ b/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
@@ -281,7 +281,7 @@
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions3">
                 <wm-button class="btn-primary" caption="Update" type="button" margin="unset 0.5em" on-click="Variables.UpdateVendorStatusFromApproved.invoke()" name="buttonFromApproved" iconclass="wi wi-update"></wm-button>
-                <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button4" iconclass="wi wi-cancel"></wm-button>
+                <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button4" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
     </wm-view>
@@ -311,7 +311,7 @@
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions4">
                 <wm-button class="btn-primary" caption="Update" type="button" margin="unset 0.5em" on-click="Variables.UpdateVendorStatusFromSuspended.invoke()" name="buttonFromSuspended" iconclass="wi wi-update"></wm-button>
-                <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button6" iconclass="wi wi-cancel"></wm-button>
+                <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button6" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
     </wm-view>
