--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -173,7 +173,8 @@
                                                     <wm-grid-action key="customButton" display-name="Add Location" show="true" class="btn-primary" iconclass="wi wi-add" title="Add Location" action="Widgets.dialogAddGISRecord.open()" shortcutkey=""
                                                     disabled="bind:!Variables.lvFormType.dataSet.data[$i].multipleGisrecords &amp;&amp; Variables.Gis2formsData.dataSet.totalElements >0"></wm-grid-action>
                                                     <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View" action="Widgets.dialogParcel.open()" disabled="false"></wm-grid-row-action>
-                                                    <wm-grid-row-action key="customRow1" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Variables.DeleteGis2Form.invoke()" disabled="false"></wm-grid-row-action>
+                                                    <wm-grid-row-action key="customRow1" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Widgets.dialogDeleteGISRecordConf.open()"
+                                                    disabled="false"></wm-grid-row-action>
                                                 </wm-grid>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
@@ -869,6 +870,21 @@
                     </wm-layoutgrid>
                 </wm-listtemplate>
             </wm-livelist>
+        </wm-dialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="viewDeleteGISRecordConf">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Delete Parcel" iconclass="wi wi-delete" name="dialogDeleteGISRecordConf">
+            <wm-layoutgrid name="layoutgrid26_1">
+                <wm-gridrow name="gridrow81_1">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn159_2" horizontalalign="center">
+                        <wm-label padding="unset 0.5em" caption="Are you sure you want to delete this parcel?" name="label76"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+            <wm-dialogactions name="dialogactions8">
+                <wm-button class="btn-primary" caption="OK" on-click="Variables.DeleteGis2Form.invoke()" name="buttonDeleteGISRecordOK" iconclass="wi wi-done"></wm-button>
+                <wm-button class="btn-default" caption="Cancel" type="button" margin="unset 0.5em" name="buttonDeleteGISRecordCancel" iconclass="wi wi-cancel" on-click="Widgets.dialogDeleteGISRecordConf.close()"></wm-button>
+            </wm-dialogactions>
         </wm-dialog>
     </wm-view>
 </wm-page>
