--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -209,7 +209,7 @@
                                                         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                         <wm-grid-action key="addNewRow" display-name="Add Vendor" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Vendor" action="Widgets.dialogAddVendor.open()" shortcutkey=""
                                                         disabled="bind:!Variables.lvFormType.dataSet.data[$i].multipleVendors &amp;&amp; Variables.Cx2Vendors2formData.dataSet.data.length > 0"></wm-grid-action>
-                                                        <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Variables.DeleteVendorFromForm.invoke();deleterowAction($event)"
+                                                        <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Widgets.dialogVendorDeleteConf.open();deleterowAction($event)"
                                                         disabled="false"></wm-grid-row-action>
                                                     </wm-grid>
                                                 </wm-livegrid>
@@ -884,6 +884,21 @@
             <wm-dialogactions name="dialogactions8">
                 <wm-button class="btn-primary" caption="OK" on-click="Variables.DeleteGis2Form.invoke()" name="buttonDeleteGISRecordOK" iconclass="wi wi-done"></wm-button>
                 <wm-button class="btn-default" caption="Cancel" type="button" margin="unset 0.5em" name="buttonDeleteGISRecordCancel" iconclass="wi wi-cancel" on-click="Widgets.dialogDeleteGISRecordConf.close()"></wm-button>
+            </wm-dialogactions>
+        </wm-dialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="viewVendorDeleteConf">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Delete Vendor" iconclass="wi wi-delete" name="dialogVendorDeleteConf">
+            <wm-layoutgrid name="layoutgrid26_1">
+                <wm-gridrow name="gridrow81_1">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn159_2" horizontalalign="center">
+                        <wm-label padding="unset 0.5em" caption="Are you sure you want to delete this vendor?" name="label76"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+            <wm-dialogactions name="dialogactions8">
+                <wm-button class="btn-primary" caption="OK" on-click="Variables.DeleteVendorFromForm.invoke();buttonDeleteVendorOKClick($event, $scope)" name="buttonDeleteVendorOK" iconclass="wi wi-done"></wm-button>
+                <wm-button class="btn-default" caption="Cancel" type="button" margin="unset 0.5em" name="buttonDeleteVendorCancel" iconclass="wi wi-cancel" on-click="Widgets.dialogVendorDeleteConf.close()"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
     </wm-view>
