--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -185,6 +185,29 @@
                         </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
+                <wm-gridrow name="gridrow35" padding="1em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn35_1">
+                        <wm-panel iconclass="wi wi-remove-red-eye" title="Default View Preferences" class="panel-primary" name="panelPreferences">
+                            <wm-layoutgrid name="layoutgrid11">
+                                <wm-gridrow name="gridrow36">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn36_3" padding="unset 20%">
+                                        <wm-composite name="composite13">
+                                            <wm-label class="col-md-3 control-label" name="label19" caption="Select default view"></wm-label>
+                                            <wm-container class="col-md-9" name="container13">
+                                                <wm-select name="selectView" dataset="bind:Variables.StandardViews.dataSet" datafield="All Fields" displayfield="viewName" datavalue="bind:Variables.PreferenceForUser.firstRecord"></wm-select>
+                                            </wm-container>
+                                        </wm-composite>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow38">
+                                    <wm-gridcolumn columnwidth="12" horizontalalign="center" name="gridcolumn38_1">
+                                        <wm-button class="btn-primary" caption="Update" type="button" margin="1em 2em 1em unset" iconclass="wi wi-save" on-tap="Variables.UpdateUserPreferences.invoke()" name="buttonUpdatePreference" on-click="Variables.UpdateUserPreferences.invoke()"></wm-button>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-panel>
+                    </wm-gridcolumn>
+                </wm-gridrow>
                 <wm-gridrow name="gridrow22_1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn36">
                         <wm-panel iconclass="wi wi-notifications" name="panelMyNotifications" title="Notification Settings" class="panel-primary">
